# Intro-to-robot-modeling

./: .gitignore
Cheat sheets/: Quiz 1 cheat sheet 1 page.docx  Quiz 1 cheat sheet.docx
Homeworks/Homework_1/: README.md  problem1.py  problem2_1.py  problem2_2.py
Homeworks/Homework_2/: problem_1_3.py  problem_2_1.py  problem_2_1_derivations.py
Homeworks/Homework_3/: dh_viz.asv  panda_dh_viz.m  roshea_hw3_code.py  roshea_hw3_readme.md  ur10_dh_viz.m
Homeworks/Homework_4/: roshea_hw4_README.md  roshea_hw4_code.py  roshea_hw4_mat_calc_code.py
Homeworks/Homework_5/: roshea_hw5_code.py  roshea_hw5_readme.md
aircraft_inspection_robot/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
aircraft_inspection_robot/aircraft_inspection_robot/: circular_trajectory_val.py  fk_validation.py  jacobian_utils.py  joystick_teleop.py  task_detection.py  teleop_control.py
aircraft_inspection_robot/config/: control.yaml
aircraft_inspection_robot/launch/: debug.launch.py  display.launch.py  gazebo.launch.py  spawn_robot_ros2.launch.py
aircraft_inspection_robot/meshes/: arm_base_link.STL  arm_connector_link.STL  arm_link_1.STL  arm_link_2.STL  arm_link_3.STL  arm_link_5.STL  back_left_wheel_link.STL  back_right_wheel_link.STL  base_link.STL  camera_holder_link.STL  camera_link.STL  (+2 more)
car_assembly/: CMakeLists.txt  README.txt  package.xml
final_exam/: problem_1_code_roshea.py  problem_3_code_roshea.py
tb_control/: CMakeLists.txt  package.xml
tb_control/launch/: open_loop_tb3.launch
tb_control/srv/: SetGoal.srv
tb_control/tb_control/: tb_openLoop.py
(+152 files in other folders)
